force-app/main/default/objects/QLabs__mdt.object
<CustomObject>
    <description>What: xDO Tooling object used to identify the org. Do Not remove or change.</description>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPartnerOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by team to determine partner vs internal orgs starting in October 2025</description>
        <label>Is Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CDO</fullName>
                </value>
                <value>
                    <fullName>Comms</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
                <value>
                    <fullName>HLS</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>MFG</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RCG</fullName>
                </value>
                <value>
                    <fullName>SDO</fullName>
                    <default>true</default>
                    <label>SDO</label>
                </value>
                <value>
                    <fullName>TTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QLabs</label>
    <pluralLabel>QLabs</pluralLabel>
</CustomObject>